# headroom

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  (+1 more)
crates/headroom-xray/: Cargo.toml
crates/headroom-xray/src/: codeburn.rs  footer.rs  lib.rs  main.rs  node.rs  tokenize.rs  transcripts.rs
crates/headroom-xray/tests/: footer.rs
docs/: package-lock.json  package.json
headroom/: agent_savings.py  config.py  onnx_runtime.py  parser.py  release_version.py
integration-guide/: index.html
search/: search_index.json
tests/: test_ccr_terse_marker.py  test_cli_proxy_env.py  test_compression_batches.py  test_cross_turn_dedup.py  test_dashboard_cache_ttl_playwright.py  test_header_isolation.py  test_image_log_redaction.py  test_issue_746_tool_search.py  test_lossless_provider.py  test_lossless_then_lossy.py  test_mcp_registry_opencode.py  test_openai_codex_routing.py  test_openai_codex_ws_lifecycle.py  test_openai_responses_compression_units.py  test_output_shaper.py  test_persistent_metrics.py  test_persistent_metrics_integration.py  test_persistent_metrics_persistence.py  test_provider_proxy_routes.py  test_providers_opencode_config.py  test_providers_opencode_install.py  test_proxy_compression_executor.py  test_proxy_dashboard_stats_cache.py  test_proxy_loopback_gating.py  test_proxy_project_savings.py  test_proxy_savings_history.py  test_proxy_settings_endpoints.py  test_proxy_streaming_request_logger.py  test_sse_thinking_blocks.py  test_tenant_key.py  test_tool_definition_serialization.py  (+1 more)
(+47 files in other folders)
